Attempting to fix white bars on mobile

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,6 +1,6 @@
 :root {
   /* COLORS */
-  --bg: linear-gradient(180deg, #1C1C1C, #000000);
+  --bg: linear-gradient(180deg, #1d1c1c, #000000);
   --card-bg: #222222;
   --text-white: #ffffff;
   --text-muted: #636363;
@@ -39,7 +39,7 @@ html, body {
   padding: 0;
   background: var(--bg);
   font-family: "Inter", system-ui, sans-serif;
-  height: 100%;
+  height: 125%;
   min-height: 100%;
 }
 
